--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <label class="chk"><input id="snap" type="checkbox" checked> Snap</label>
       <label>Texto <input id="textInput" type="text" placeholder="Etiqueta / hint…"/></label>
       <label class="chk"><input id="liveAscii" type="checkbox" checked> Live ASCII</label>
+      <label>Fondo <input id="bgInput" type="file" accept="image/*"></label>
+      <label>Opacidad <input id="bgOpacity" type="range" min="0" max="1" step="0.05" value="0.35"></label>
+      <button id="autoDetect">Auto detectar</button>
       <button id="forceReload" title="Recargar la página (cache-bust)">Recargar</button>
     </div>
     <div class="tool-group">
@@ -53,6 +56,7 @@
           <li>Doble‑clic en un rect para <b>renombrarlo</b> (se usa como <i>hint</i>).</li>
           <li>La exportación <b>Hybrid</b> detecta contención geométrica y elige <i>paned</i> vertical/horizontal o deja el nodo como contenedor simple.</li>
           <li>Activá/Desactivá <b>Live ASCII</b> para ver el wireframe al instante.</li>
+          <li>Nuevo: podés cargar una <b>imagen de fondo</b> y usar <b>Auto detectar</b> (OpenCV.js) para proponer rectángulos.</li>
         </ul>
       </section>
     </aside>
@@ -60,6 +64,9 @@
 
   <footer class="foot">Dibujá libre: simple o complejo. El export usa geometría para decidir paned/grid/place o ASCII correcto.</footer>
 
+  <!-- Carga automática de OpenCV.js con fallback a múltiples CDNs -->
+  <script src="opencv-loader.js"></script>
   <script type="module" src="app.js"></script>
+  <script type="module" src="image_detect.js"></script>
 </body>
 </html>
